Apply suggestions from code review
Co-authored-by: tokyojen <143795032+tokyojen@users.noreply.github.com>

--- a/docs/guidelines/language/money.mdx
+++ b/docs/guidelines/language/money.mdx
@@ -13,14 +13,14 @@ import DoAndDont from '@site/src/components/DoAndDont';
 
 ## General rules  
 
-Use the same formatting throughout your user interface. Place the currency symbol before the amount within American English user interfaces.  
+Place the currency symbol before the amount in English and use the same formatting style throughout. 
 
 <DoAndDont>
   <DoAndDont.Do>
     <DoAndDont.Item>£320</DoAndDont.Item>
   </DoAndDont.Do>
   <DoAndDont.Dont>
-    <DoAndDont.Item>£320/£320.00/Three hundred and twenty pounds/320 pounds </DoAndDont.Item>
+    <DoAndDont.Item>£320/£320.00/Three hundred and twenty pounds/320 pounds (mixed styles) </DoAndDont.Item>
 	<DoAndDont.Item>320£</DoAndDont.Item>
   </DoAndDont.Dont>
 </DoAndDont>
@@ -79,7 +79,7 @@ Write out the full word in formal and legal documents. 
   </DoAndDont.Do>
 </DoAndDont>
 
-## Understand when to use the currency symbol (¥) or the currency code (JPY). 
+## Using currency symbols (¥) or codes (JPY). 
 
 **Currency symbol ($)**
 - User interface: dashboards, displays, etc.
@@ -100,4 +100,4 @@ Write out the full word in formal and legal documents. 
 ## Related  
 
 - [Numbers and percentages ](numbers.mdx)
-- [ISO 4217 Currency codes](https://www.iso.org/iso-4217-currency-codes.html)
+- [ISO 4217 Currency codes (external link)](https://www.iso.org/iso-4217-currency-codes.html)
