--- a/docs/guidelines/language/time-date.mdx
+++ b/docs/guidelines/language/time-date.mdx
@@ -121,14 +121,14 @@ Avoid calendar weeks (CW) whenever possible as these are very specific to certai
 	</DoAndDont.Do>
 	<DoAndDont.Dont>
 		<DoAndDont.Item>CW 15 (15th week of the year)</DoAndDont.Item>
-		<DoAndDont.Item>CW 15/2025 (15th calendar week of the year 2025)</DoAndDont.Item>
+		<DoAndDont.Item>CW 15/2025 (15th calendar week year 2025)</DoAndDont.Item>
 		<DoAndDont.Item>Calendar week 05 in year 2025</DoAndDont.Item>
 	</DoAndDont.Dont>
 </DoAndDont>
 
 ## Months 
 
-Start all months with a capital letter. Use three-letter abbreviations without punctuation when there isn’t enough space.  
+Start all months with a capital letter. Use abbreviations without punctuation when there isn’t enough space.  
 
 <DoAndDont>
 	<DoAndDont.Do>
