--- a/docs/guidelines/language/numbers.mdx
+++ b/docs/guidelines/language/numbers.mdx
@@ -5,7 +5,7 @@ doc-type: banner
 component-tabs:
   - ""
 no_single_tab: true
-description: In industrial settings, numbers and percentages are key to tracking performance, spotting trends, and making informed decisions. Since there are many ways to write them, the following guidelines aim to keep usage simple and consistent across teams.
+description: In industrial settings, numbers and percentages are key to tracking performance, spotting trends, and making informed decisions. As there are many ways to write them, these guidelines aim to keep usage consistent across teams.
 ---
 
 import DoAndDont from '@site/src/components/DoAndDont';
@@ -14,7 +14,7 @@ import DoAndDont from '@site/src/components/DoAndDont';
 
 ## General rules
 
-Write “Number” when there is enough space within the user interface.  
+Write “Number” or ”number” when there is enough space within the user interface.  
 
 <DoAndDont>
   <DoAndDont.Do>
@@ -47,7 +47,7 @@ Avoid using the # symbol with numbers.  
   </DoAndDont.Dont>
 </DoAndDont>
 
-Write numbers as digits, such as “9” instead of “nine”, in industrial UIs.   
+Write numbers as digits, such as “9” instead of “nine”, in industrial user interfaces.   
 
 <DoAndDont>
   <DoAndDont.Do>
@@ -58,7 +58,7 @@ Write numbers as digits, such as “9” instead of “nine”, in industrial UI
   </DoAndDont.Dont>
 </DoAndDont>
 
-Write numbers with four digits and more with commas to separate thousands, millions, billions, etc. in American English.  
+Write numbers with four digits and more with commas to separate thousands, millions, etc. in American English.  
 
 <DoAndDont>
   <DoAndDont.Do>
@@ -105,7 +105,7 @@ Use either “to” or separate text fields for ranges with minus numbers for re
 <DoAndDont>
 	<DoAndDont.Do>
 		<DoAndDont.Item>-12 to -15°C</DoAndDont.Item>
-		<DoAndDont.Item>Min temp: -12 / Max temp: -15°</DoAndDont.Item>
+		<DoAndDont.Item>Min temp (C): -12° / Max temp (C): -15°</DoAndDont.Item>
 	</DoAndDont.Do>
 </DoAndDont>
 
@@ -150,11 +150,11 @@ Use the singular “million” when talking about a specific number.  
 <DoAndDont>
 	<DoAndDont.Do>
 		<DoAndDont.Item>34 million</DoAndDont.Item>
-		<DoAndDont.Item>Our system processes one million connections a minute.</DoAndDont.Item>
+		<DoAndDont.Item>Our system processes one million connections.</DoAndDont.Item>
 	</DoAndDont.Do>
 	<DoAndDont.Dont>
 		<DoAndDont.Item>34 millions</DoAndDont.Item>
-		<DoAndDont.Item>Our system processes one millions connections a minute.</DoAndDont.Item>
+		<DoAndDont.Item>Our system processes one millions connections.</DoAndDont.Item>
 	</DoAndDont.Dont>
 </DoAndDont>
 
@@ -162,7 +162,7 @@ Use the plural “millions” when talking about an unspecific number.  
 
 <DoAndDont>
 	<DoAndDont.Do>
-		<DoAndDont.Item>Our goal is to deliver software to millions of happy users worldwide</DoAndDont.Item>
+		<DoAndDont.Item>Our goal is to deliver software to millions of happy users worldwide.</DoAndDont.Item>
 	</DoAndDont.Do>
 </DoAndDont>
 
@@ -177,7 +177,7 @@ Write out numbers in the millions and billions (“one million” instead of “
 	</DoAndDont.Dont>
 </DoAndDont>
 
-Use numerals for numbers in the millions for dates, addresses, units of measurement, currency and percentages. 
+Use numerals for numbers in the millions for dates, addresses, units of measurement, currencies and percentages. 
 
 <DoAndDont>
 	<DoAndDont.Do>
@@ -192,7 +192,7 @@ Use numerals for numbers in the millions for dates, addresses, units of measurem
 
 ## Percentages 
 
-Use % instead of “percentage” within the user interface to save space. 
+Use the % symbol instead of writing out “percentage” within the user interface to save space. 
 
 <DoAndDont>
 	<DoAndDont.Do>
@@ -216,15 +216,16 @@ Use % after the number and without a space.  
 
 ## Phone numbers 
 
-Separate phone numbers into groups for clarity. 
+Separate phone numbers into groups for clarity when backend localization or separate fields are not possible. 
 
 <DoAndDont>
 	<DoAndDont.Do>
 		<DoAndDont.Item>Country code, area code, numbers in groupings of 3 or 4</DoAndDont.Item>
+		<DoAndDont.Item>0044, 208, 899 7032</DoAndDont.Item>
 	</DoAndDont.Do>
 </DoAndDont>
 
-Use the plus symbol (+) or “00” before the country code. Show extension numbers with a hyphen.
+Use the plus symbol (+) or “00” before the country code and show extension numbers with a hyphen.
 
 <DoAndDont>
 	<DoAndDont.Do>
