--- a/docs/guidelines/language/software-versions.mdx
+++ b/docs/guidelines/language/software-versions.mdx
@@ -4,7 +4,7 @@ title: Software versions
 doc-type: 'banner'
 component-tabs: ['']
 no_single_tab: true
-description: 'Consistency in writing about versions builds trust and helps users easily track updates and improvements. A clear, predictable versioning system also reinforces the stability and reliability of your product.'
+description: 'Consistency in writing about versions builds trust and helps users easily track updates and improvements. Semantic versioning is often used to align with product and development teams and to communicate versions clearly to users. When this is not possible, a clear and predictable versioning system needs to be used to reinforce the stability and reliability of your product.'
 ---
 
 import DoAndDont from '@site/src/components/DoAndDont';
@@ -25,15 +25,15 @@ Write “version” in full without abbreviating when there is enough space with
   </DoAndDont.Dont>
 </DoAndDont>
 
-Use “Version” with a capital V when it starts a sentence or is used as a label as it is not a proper noun.  
+Use “Version” with a capital V when it starts a sentence.  
 
 <DoAndDont>
   <DoAndDont.Do>
-    <DoAndDont.Item>There are three new exciting changes in Version 3.5.1.</DoAndDont.Item>
+    <DoAndDont.Item>Version 3.5.1 has three new exciting changes.</DoAndDont.Item>
   </DoAndDont.Do>
 </DoAndDont>
 
-Use “Version” with a capital V when referring to a specific release.  
+Use “Version” with a capital V when referring to a named release or is used as a label.  
 
 <DoAndDont>
   <DoAndDont.Do>
@@ -41,7 +41,7 @@ Use “Version” with a capital V when referring to a specific release.  
   </DoAndDont.Do>
 </DoAndDont>
 
-Use “version” with a lower case “v” when talking about unspecified versions.  
+Use “version” with a lower case “v” when talking about unspecified versions as it is not a proper noun.  
 
 <DoAndDont>
   <DoAndDont.Do>
