incorporate feedback from review

--- a/docs/guidelines/language/numbers.mdx
+++ b/docs/guidelines/language/numbers.mdx
@@ -85,7 +85,9 @@ Write out the unit only once in ranges. 
 <DoAndDont>
   <DoAndDont.Do>
     <DoAndDont.Item>The temperature fluctuated between 20–25°C</DoAndDont.Item>
+<DoAndDont.Dont>
      <DoAndDont.Item>The temperature fluctuated between 20°C–25°C</DoAndDont.Item>
+ </DoAndDont.Dont>
   </DoAndDont.Do>
 </DoAndDont>
 
