--- a/docs/guidelines/language/time-date.mdx
+++ b/docs/guidelines/language/time-date.mdx
@@ -175,7 +175,7 @@ Use “th” and “nd” to reference centuries with ordinals without using sup
 		<DoAndDont.Item>Welcome to the 21st century of industrial innovation! Our app uses AI to deliver efficiency in your operations.</DoAndDont.Item>
 	</DoAndDont.Do>
 	<DoAndDont.Dont>
-		<DoAndDont.Item>Welcome to the 21st century of industrial innovation! Our app uses AI to deliver efficiency in your operations.</DoAndDont.Item>
+		<DoAndDont.Item>Welcome to the $_21^st$ century of industrial innovation! Our app uses AI to deliver efficiency in your operations.</DoAndDont.Item>
 	</DoAndDont.Dont>
 </DoAndDont>
 
@@ -183,4 +183,4 @@ Use “th” and “nd” to reference centuries with ordinals without using sup
 
 - [Date input](../../components/input-date/index.mdx)
 - [Date picker](../../components/date-picker/index.mdx)
-- Time input
+- [Time input](../../components/input-time/index.mdx)
