incorporated feedback from review
- move to their own folders
- adapt dodont
- link spinner

--- a/docs/guidelines/language/messaging/progress-update.mdx
+++ b/docs/guidelines/language/messaging/progress-update.mdx
@@ -5,7 +5,7 @@ doc-type: banner
 component-tabs:
   - ""
 no_single_tab: true
-description: While some companies use humorous text like “Chopping the onions…” or “Gathering your dragons…” to give users progress updates, our messages are straightforward and professional, such as "Loading…", "Saving…", or "Processing…" alongside visual indicators. 
+description: While some companies use humorous text like “Chopping the onions…” or “Gathering your dragons…” to give users progress updates, our messages are straightforward and professional, such as "Loading…", "Saving…", or "Processing…" alongside visual indicators.
 ---
 
 import DoAndDont from '@site/src/components/DoAndDont';
@@ -153,8 +153,8 @@ Manage user expectations and reduce frustration for lengthy processes with unkno
   </DoAndDont.Do>
 </DoAndDont>
 
-## Related  
+## Related
 
-- Loading indicators
 - [Punctuation](punctuation.md)
 - [Grammar](grammar-and-vocabulary.md)
+- [Spinner (component)](../../components/spinner/index.mdx)
