--- a/docs/guidelines/language/formatting/numbers.mdx
+++ b/docs/guidelines/language/formatting/numbers.mdx
@@ -244,6 +244,6 @@ Use the plus symbol (+) or “00” before the country code and show extension n
 
 - [Time and dates](time-date.mdx)
 - [Money and currencies](money.mdx)
-- [Charts](../../components/charts-overview/index.mdx)
-- [KPI](../../components/kpi/index.mdx)
-- [Key value](../../components/key-value/index.mdx)
+- [Charts](../../../components/charts-overview/index.mdx)
+- [KPI](../../../components/kpi/index.mdx)
+- [Key value](../../../components/key-value/index.mdx)
