--- a/docs/guidelines/language/formatting/time-date.mdx
+++ b/docs/guidelines/language/formatting/time-date.mdx
@@ -181,6 +181,6 @@ Use “th” and “nd” to reference centuries with ordinals without using sup
 
 ## Related  
 
-- [Date input](../../components/input-date/index.mdx)
-- [Date picker](../../components/date-picker/index.mdx)
-- [Time input](../../components/input-time/index.mdx)
+- [Date input](../../../components/input-date/index.mdx)
+- [Date picker](../../../components/date-picker/index.mdx)
+- [Time input](../../../components/input-time/index.mdx)
