--- a/docs/guidelines/language/messaging/progress-update.mdx
+++ b/docs/guidelines/language/messaging/progress-update.mdx
@@ -155,6 +155,6 @@ Manage user expectations and reduce frustration for lengthy processes with unkno
 
 ## Related
 
-- [Punctuation](punctuation.md)
-- [Grammar](grammar-and-vocabulary.md)
-- [Spinner (component)](../../components/spinner/index.mdx)
+- [Punctuation](../punctuation.md)
+- [Grammar](../grammar-and-vocabulary.md)
+- [Spinner](../../../components/spinner/index.mdx)
