docs: usage guide for new application header

--- a/docs/components/application-header/index.mdx
+++ b/docs/components/application-header/index.mdx
@@ -1,6 +1,6 @@
 ---
 doc-type: "tabs"
-description: 'Application headers provide a structured area for key elements like brand logo, application name and user avatar.'
+description: 'Application headers provide a structured area for essential elements such as company logo and application name, while allowing flexibility through optional elements like the user avatar or application switch.'
 title: 'Application header'
 deprecated:
 ---
