--- a/docs/legacy/drawer/index.mdx
+++ b/docs/legacy/drawer/index.mdx
@@ -1,6 +1,5 @@
 ---
-doc-type: "tabs"
+doc-type: 'tabs'
 description: 'Drawers are containers that open on the click of a button to show additional content.'
 title: 'Drawer'
-deprecated:
 ---
