fix unlisted content

--- a/docs/legacy/map-navigation/index.mdx
+++ b/docs/legacy/map-navigation/index.mdx
@@ -1,6 +1,5 @@
 ---
-doc-type: "tabs"
+doc-type: 'tabs'
 description: 'Map navigation layout structures present map-like content, supported by a collapsible context panel and temporary overlays.'
 title: 'Map navigation'
 ---
-
