Update formatting docs and remove progress update guide
Changed the position of the Formatting category, fixed a link typo in names-titles.mdx, and removed a broken link in timezones.mdx. Deleted the progress-update.mdx file from messaging guidelines as part of documentation cleanup.

--- a/docs/guidelines/language/formatting/names-titles.mdx
+++ b/docs/guidelines/language/formatting/names-titles.mdx
@@ -129,6 +129,6 @@ Always capitalize Managing Board and use lower case for "member".
 
 ## Related
 
-- [Addresses](addresses/.mdx)
+- [Addresses](adresses.mdx)
 - [Input (text)](../../../components/input/index.mdx)
 - [Forms layout](../../../components/forms-layout/index.mdx)
