Update capitalization in guideline titles and fix ordinal formatting
Standardized capitalization for sidebar labels and titles in 'names-titles.mdx' and 'timezones.mdx'. Corrected ordinal formatting in 'time-date.mdx' to use HTML <sup> tags instead of LaTeX-style notation.

--- a/docs/guidelines/language/formatting/names-titles.mdx
+++ b/docs/guidelines/language/formatting/names-titles.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_label: Names and Titles
-title: Names and Titles
+sidebar_label: Names and titles
+title: Names and titles
 doc-type: banner
 component-tabs:
   - ""
