--- a/docs/guidelines/language/formatting/timezones.mdx
+++ b/docs/guidelines/language/formatting/timezones.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_label: Time and Time Zones
-title: Time and Time Zones
+sidebar_label: Time and time zones
+title: Time and time zones
 doc-type: banner
 component-tabs:
   - ""
