--- a/docs/guidelines/language/formatting/time-date.mdx
+++ b/docs/guidelines/language/formatting/time-date.mdx
@@ -175,7 +175,7 @@ Use “th” and “nd” to reference centuries with ordinals without using sup
 		<DoAndDont.Item>Welcome to the 21st century of industrial innovation! Our app uses AI to deliver efficiency in your operations.</DoAndDont.Item>
 	</DoAndDont.Do>
 	<DoAndDont.Dont>
-		<DoAndDont.Item>Welcome to the $_21^st$ century of industrial innovation! Our app uses AI to deliver efficiency in your operations.</DoAndDont.Item>
+		<DoAndDont.Item>Welcome to the 21<sup>st</sup> century of industrial innovation! Our app uses AI to deliver efficiency in your operations.</DoAndDont.Item>
 	</DoAndDont.Dont>
 </DoAndDont>
 
