--- a/docs/legacy/basic-navigation/index.mdx
+++ b/docs/legacy/basic-navigation/index.mdx
@@ -5,4 +5,5 @@ title: 'Basic navigation'
 deprecated:
   - { type: 'deprecated', message: 'Since 2.6.0' }
   - /docs/components/application
+unlisted: true
 ---
