Fix spelling of 'addresses' in docs
Renamed 'adresses.mdx' to 'addresses.mdx' and updated references and metadata to correct the spelling. This improves consistency and prevents broken links in documentation.

--- a/docs/guidelines/language/formatting/addresses.mdx
+++ b/docs/guidelines/language/formatting/addresses.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_label: Adresses
-title: Adresses
+sidebar_label: Addresses
+title: Addresses
 doc-type: banner
 component-tabs:
   - ""
