--- a/docs/guidelines/language/formatting/names-titles.mdx
+++ b/docs/guidelines/language/formatting/names-titles.mdx
@@ -129,6 +129,6 @@ Always capitalize Managing Board and use lower case for "member".
 
 ## Related
 
-- [Addresses](adresses.mdx)
+- [Addresses](addresses.mdx)
 - [Input (text)](../../../components/input/index.mdx)
 - [Forms layout](../../../components/forms-layout/index.mdx)
