Apply suggestions from code review
Co-authored-by: tokyojen <143795032+tokyojen@users.noreply.github.com>

--- a/docs/guidelines/language/formatting/addresses.mdx
+++ b/docs/guidelines/language/formatting/addresses.mdx
@@ -12,7 +12,7 @@ import DoAndDont from '@site/src/components/DoAndDont';
 
 ## General rules
 
-Use specific text field labels for address.
+Use specific text field labels for different parts of the address.
 
 <DoAndDont>
   <DoAndDont.Do>
@@ -29,7 +29,7 @@ Ensure special and international characters are accepted for international addre
   <DoAndDont.Do>
     <DoAndDont.Item>12-142 Elm St</DoAndDont.Item>
     <DoAndDont.Item>#8C (unit or suite number)</DoAndDont.Item>
-    <DoAndDont.Item>Straße (Street in German)</DoAndDont.Item>
+    <DoAndDont.Item>Straße (street in German)</DoAndDont.Item>
     <DoAndDont.Item>VI (unit for floor in German)</DoAndDont.Item>
     <DoAndDont.Item>München (for Munich)</DoAndDont.Item>
   </DoAndDont.Do>
