Apply suggestions from final edit review
Co-authored-by: tokyojen <143795032+tokyojen@users.noreply.github.com>

--- a/docs/guidelines/language/formatting/addresses.mdx
+++ b/docs/guidelines/language/formatting/addresses.mdx
@@ -87,7 +87,7 @@ Use the correct regional format for ZIP codes, including any necessary spaces or
 
 Use common abbreviations for street types without full stops to avoid visual clutter. 
 
-|Full Word|Abbreviation|
+|Full word|Abbreviation|
 |---|---|
 |Street|St|
 |Avenue|Ave|
@@ -101,15 +101,15 @@ Use common abbreviations for street types without full stops to avoid visual clu
 
 ## Buildings
 
-Use "Floor" numbers either before or after. Note different floor counting systems for international applications.
+Add floor numbers either before or after the word and note different international floor counting systems.
 
 <DoAndDont>
   <DoAndDont.Do>
     <DoAndDont.Item>Floor 3</DoAndDont.Item>
-    <DoAndDont.Item>3rd Floor</DoAndDont.Item>
-    <DoAndDont.Item>Ground Floor (UK/Europe)</DoAndDont.Item>
-    <DoAndDont.Item>First Floor (US)</DoAndDont.Item>
-    <DoAndDont.Item>Floor G (International)</DoAndDont.Item>
+    <DoAndDont.Item>3rd floor</DoAndDont.Item>
+    <DoAndDont.Item>Ground floor (UK/Europe)</DoAndDont.Item>
+    <DoAndDont.Item>First floor (US)</DoAndDont.Item>
+    <DoAndDont.Item>Floor G (international)</DoAndDont.Item>
   </DoAndDont.Do>
   <DoAndDont.Dont>
     <DoAndDont.Item>Floor 3rd</DoAndDont.Item>
@@ -130,7 +130,7 @@ Use numbers and letters after buildings, suites, apartments, rooms and floors.
 
 ## Production lines
 
-Use "Line" or add a description to your line, e.g. "Production line" or "Assembly line". Use "Zone" or "Area" for larger facilities.
+Use "Line" or add a description, e.g. "Assembly line" and use "Zone" or "Area" for larger facilities.
 
 <DoAndDont>
   <DoAndDont.Do>
@@ -147,7 +147,7 @@ Use clear labels when possible with "Latitude" first, then "Longitude".
 
 <DoAndDont>
   <DoAndDont.Do>
-    <DoAndDont.Item>Latitude: 48.14389 | Longitude: 11.57633</DoAndDont.Item>
+    <DoAndDont.Item>Latitude: 48.14389° | Longitude: 11.57633°</DoAndDont.Item>
   </DoAndDont.Do>
 </DoAndDont>
 
@@ -155,7 +155,7 @@ Use plus (+), minus (-), a comma and a space when adding both in one text field.
 
 <DoAndDont>
   <DoAndDont.Do>
-    <DoAndDont.Item>+48.14389, +11.57633</DoAndDont.Item>
+    <DoAndDont.Item>+48.14389°, +11.57633°</DoAndDont.Item>
   </DoAndDont.Do>
 </DoAndDont>
 
