--- a/docs/guidelines/language/formatting/money.mdx
+++ b/docs/guidelines/language/formatting/money.mdx
@@ -25,7 +25,7 @@ Place the currency symbol before the amount in English and use the same formatti
   </DoAndDont.Dont>
 </DoAndDont>
 
-Use decimal points for cents or smaller units within American English user interfaces.
+Use decimal points for cents or smaller units within English user interfaces.
 
 <DoAndDont>
   <DoAndDont.Do>
@@ -91,7 +91,7 @@ Write out the full word in formal and legal documents.
 
 **ISO currency code (USD)**
 - Legal contracts
-- Documentation: compliance, regulatory
+- Documentation: compliance, regulatory, etc.
 - Financial documents
 - Financial transactions
 - Bank statements
