--- a/docs/guidelines/language/formatting/names-titles.mdx
+++ b/docs/guidelines/language/formatting/names-titles.mdx
@@ -10,11 +10,11 @@ description: Accurate and consistent use of names and titles is essential for ma
 
 import DoAndDont from '@site/src/components/DoAndDont';
 
-# Names and Titles
+# Names and titles
 
-## General Rules
+## General rules
 
-Use "First name" and "Last name" in forms and avoid "Surname" and "Full name".
+Use "First name" and "Last name" in forms and ensure text fields accept names with only one letter.
 
 <DoAndDont>
   <DoAndDont.Do>
@@ -27,32 +27,30 @@ Use "First name" and "Last name" in forms and avoid "Surname" and "Full name".
   </DoAndDont.Dont>
 </DoAndDont>
 
-Allow text fields to accept names with only one letter.
 
-Not all cultures have equivalents to some titles used in the United States, such as Ms.
 
 Use first names to welcome users to applications.
 
 <DoAndDont>
   <DoAndDont.Do>
-    <DoAndDont.Item>Welcome, Susanne</DoAndDont.Item>
+    <DoAndDont.Item>Welcome Susanne</DoAndDont.Item>
   </DoAndDont.Do>
 </DoAndDont>
 
-## Inclusive Titles
+## Inclusive titles
 
-Avoid gendered titles unless absolutely necessary for your application. Use "Title", not "Honorific", to describe words such as Mr. and Mrs.Use non-gendered honorifics in your forms.
+Avoid gendered titles unless absolutely necessary for your application. Use "Title", not "Honorific", to describe words such as Mr. and Mrs. Note that not all cultures have equivalents to some titles used in the United States, such as Ms.
 
 <DoAndDont>
   <DoAndDont.Do>
-    <DoAndDont.Item>[ Mr. | Ms. | Mx. | None | Other | Prefer not to say ]</DoAndDont.Item>
+    <DoAndDont.Item>[ Mr. | Ms. | Mx. | None | Other | Prefer not to say]</DoAndDont.Item>
   </DoAndDont.Do>
   <DoAndDont.Dont>
     <DoAndDont.Item>[ Mr. | Mrs. | Miss | Ms. ]</DoAndDont.Item>
   </DoAndDont.Dont>
 </DoAndDont>
 
-## Title Punctuation
+## Title punctuation
 
 Use full stops for all abbreviated titles in American English.
 
@@ -65,7 +63,7 @@ Use full stops for all abbreviated titles in American English.
   </DoAndDont.Dont>
 </DoAndDont>
 
-Use titles with full names or surnames. Avoid using titles when addressing users with only their first name.
+Use titles with full names or surnames but do not use titles when addressing users with only their first name.
 
 <DoAndDont>
   <DoAndDont.Do>
@@ -88,9 +86,9 @@ Use full stops for all abbreviated professional titles in American English.
   </DoAndDont.Do>
 </DoAndDont>
 
-## Corporate Titles
+## Corporate titles
 
-Use capital letters for corporate titles especially with the name. Use capital letters for corporate title acronyms.Use capital letters for corporate title acronyms.
+Use capital letters for corporate titles especially with the name and use capital letters for corporate title acronyms.
 
 <DoAndDont>
   <DoAndDont.Do>
@@ -103,7 +101,7 @@ Use capital letters for corporate titles especially with the name. Use capital l
   </DoAndDont.Dont>
 </DoAndDont>
 
-Use lower case when titles are used generically and without a name. Separate titles from names by placing a comma between them.
+Use lower case when titles are used generically (without a name) and separate titles from names with a comma.
 
 <DoAndDont>
   <DoAndDont.Do>
