--- a/docs/guidelines/language/formatting/numbers.mdx
+++ b/docs/guidelines/language/formatting/numbers.mdx
@@ -71,7 +71,7 @@ Write numbers with four digits and more with commas to separate thousands, milli
 
 ## Numbers and punctuation
 
-Use en dashes instead of hyphens for ranges.
+Use en dashes (–) instead of hyphens (-) for ranges.
 
 <DoAndDont>
   <DoAndDont.Do>
@@ -130,9 +130,8 @@ Write decimals using a period (.) to separate the whole number from the fraction
 
 ## Thousands, millions and billions
 
-Use “K” as an abbreviation for thousand, “M” for million, and “B” for billion without a period or space. 
+Use “K” as an abbreviation for thousand, “M” for million, and “B” for billion without a period or space. Consider variations in other languages and never use abbreviations when there is doubt.
 
-Consider variations in other languages and never use abbreviations when there is doubt.  
 
 <DoAndDont>
 	<DoAndDont.Do>
@@ -183,10 +182,9 @@ Use numerals for numbers in the millions for dates, addresses, units of measurem
 
 <DoAndDont>
 	<DoAndDont.Do>
-		<DoAndDont.Item>The company headquarters is located at 1,000,000 Main Street.</DoAndDont.Item>
 		<DoAndDont.Item>The temperature can reach 1,000,000°C in the pod.</DoAndDont.Item>
 		<DoAndDont.Item>The cargo ship can carry up to 1,000,000kg.</DoAndDont.Item>
-		<DoAndDont.Item>The generator’s top speed is 1,000,000km/h.</DoAndDont.Item>
+		
 		<DoAndDont.Item>The success rate of our new implementation is 1,000,000%.</DoAndDont.Item>
 		<DoAndDont.Item>The project budget is $1,000,000. </DoAndDont.Item>
 	</DoAndDont.Do>
