--- a/docs/guidelines/language/formatting/software-versions.mdx
+++ b/docs/guidelines/language/formatting/software-versions.mdx
@@ -17,7 +17,7 @@ Write “version” in full without abbreviating when there is enough space with
 
 <DoAndDont>
   <DoAndDont.Do>
-    <DoAndDont.Item>version 2.12.6</DoAndDont.Item>
+    <DoAndDont.Item>Version 2.12.6</DoAndDont.Item>
   </DoAndDont.Do>
   <DoAndDont.Dont>
     <DoAndDont.Item>ver 2.12.6</DoAndDont.Item>
