--- a/docs/guidelines/language/formatting/time-date.mdx
+++ b/docs/guidelines/language/formatting/time-date.mdx
@@ -168,7 +168,7 @@ Use plural -s when talking about decades.
 
 ## Centuries
 
-Use “th” and “nd” to reference centuries with ordinals without using superscript.
+Use “th” and “nd” to reference centuries with ordinal numbers (sequencing) without using superscript.
 
 <DoAndDont>
 	<DoAndDont.Do>
