--- a/docs/guidelines/language/formatting/measurements.mdx
+++ b/docs/guidelines/language/formatting/measurements.mdx
@@ -5,7 +5,7 @@ doc-type: banner
 component-tabs:
   - ""
 no_single_tab: true
-description: In industrial settings, accurate measurements are vital for ensuring process efficiency, safety and product quality. These measurements range from basic dimensions, like length, width, and height, to complex parameters such as temperature, pressure, and flow rate. Proper unit casing is essential to help users interpret data correctly and make informed decisions.
+description: In industrial settings, accurate measurements are vital for ensuring process efficiency, safety and product quality. These measurements range from basic dimensions, like length, width, and height, to complex parameters such as temperature, pressure, and flow rate. Proper unit writing is essential to help users interpret data correctly and make informed decisions.
 ---
 
 import DoAndDont from '@site/src/components/DoAndDont';
@@ -25,7 +25,7 @@ Use the same measurement format and style throughout your user interface and con
 	</DoAndDont.Dont>
 </DoAndDont>
 
-Do not allow line breaks between the value and the unit by using a protected (non-breaking) space. Use the singular when talking about a specific number and in abbreviations. Use lower case as the default for most unit abbreviations (see exceptions below).  
+Avoid line breaks between the value and the unit by using a protected (non-breaking) space. Use the singular when talking about a specific number and in abbreviations. Use lower case as the default for most unit abbreviations.  
 
 <DoAndDont>
 	<DoAndDont.Do>
@@ -42,7 +42,7 @@ Do not allow line breaks between the value and the unit by using a protected (no
 	</DoAndDont.Dont>
 </DoAndDont>
 
-Use lower case for units named after people when the abbreviation is written out in full. Use upper case for unit abbreviations named after people.
+Use upper case for unit abbreviations named after people and lower case when the abbreviation is written out in full. 
 
 <DoAndDont>
 	<DoAndDont.Do>
@@ -65,7 +65,7 @@ Use lower case for units named after people when the abbreviation is written out
 | Hertz  | Hz                |
 | Ampere | A                 |
 
-Use a slash to show how compound units are divided.
+Use a slash to show how compound units are divided for clarity.
 
 <DoAndDont>
 	<DoAndDont.Do>
@@ -73,7 +73,7 @@ Use a slash to show how compound units are divided.
 		<DoAndDont.Item>A/m</DoAndDont.Item>
 	</DoAndDont.Do>
 	<DoAndDont.Dont>
-		<DoAndDont.Item>km / h</DoAndDont.Item>
+		<DoAndDont.Item>km-h</DoAndDont.Item>
 	</DoAndDont.Dont>
 </DoAndDont>
 
@@ -171,7 +171,7 @@ Use the degree symbol (°) before the initial letter of the temperature scale wi
 
 ## Web
 
-Use “px” in lower case to abbreviate pixels with a space for readability. Use spaces when writing dimensions for clarity. Avoid periods (dots, full stops) after px, pt (point) and dpi (dots per inch).  
+Use “px” in lower case to abbreviate pixels with a space for readability without periods after px, pt and dpi (dots per inch).  
 
 <DoAndDont>
 	<DoAndDont.Do>
