Rename time-date.mdx to date.mdx and update references
Renamed the time-date.mdx file to date.mdx and updated all internal links and references in related documentation files. Also made minor formatting and heading capitalization improvements in numbers.mdx, software-versions.mdx, and timezones.mdx for consistency.

--- a/docs/guidelines/language/formatting/numbers.mdx
+++ b/docs/guidelines/language/formatting/numbers.mdx
@@ -47,7 +47,7 @@ Avoid using the # symbol with numbers.
   </DoAndDont.Dont>
 </DoAndDont>
 
-Write numbers as digits, such as “9” instead of “nine”, in industrial user interfaces.   
+Write numbers as digits, such as “9” instead of “nine”, in industrial user interfaces.
 
 <DoAndDont>
   <DoAndDont.Do>
@@ -58,7 +58,7 @@ Write numbers as digits, such as “9” instead of “nine”, in industrial us
   </DoAndDont.Dont>
 </DoAndDont>
 
-Write numbers with four digits and more with commas to separate thousands, millions, etc. in American English.  
+Write numbers with four digits and more with commas to separate thousands, millions, etc. in American English.
 
 <DoAndDont>
   <DoAndDont.Do>
@@ -85,13 +85,13 @@ Write out the unit only once in ranges.
 <DoAndDont>
   <DoAndDont.Do>
     <DoAndDont.Item>The temperature fluctuated between 20–25°C</DoAndDont.Item>
-<DoAndDont.Dont>
-     <DoAndDont.Item>The temperature fluctuated between 20°C–25°C</DoAndDont.Item>
- </DoAndDont.Dont>
   </DoAndDont.Do>
+  <DoAndDont.Dont>
+     <DoAndDont.Item>The temperature fluctuated between 20°C–25°C</DoAndDont.Item>
+  </DoAndDont.Dont>
 </DoAndDont>
 
-Use the minus hyphen for negative numbers which is better aligned than a normal hyphen (Unicode U+2212).  
+Use the minus hyphen for negative numbers which is better aligned than a normal hyphen (Unicode U+2212).
 
 <DoAndDont>
 	<DoAndDont.Do>
@@ -102,7 +102,7 @@ Use the minus hyphen for negative numbers which is better aligned than a normal 
 	</DoAndDont.Dont>
 </DoAndDont>
 
-Use either “to” or separate text fields for ranges with minus numbers for readability.  
+Use either “to” or separate text fields for ranges with minus numbers for readability.
 
 <DoAndDont>
 	<DoAndDont.Do>
@@ -113,7 +113,7 @@ Use either “to” or separate text fields for ranges with minus numbers for re
 
 ## Decimals
 
-Write decimals using a period (.) to separate the whole number from the fractional part in American English. 
+Write decimals using a period (.) to separate the whole number from the fractional part in American English.
 
 <DoAndDont>
 	<DoAndDont.Do>
@@ -130,7 +130,7 @@ Write decimals using a period (.) to separate the whole number from the fraction
 
 ## Thousands, millions and billions
 
-Use “K” as an abbreviation for thousand, “M” for million, and “B” for billion without a period or space. Consider variations in other languages and never use abbreviations when there is doubt.
+Use “K” as an abbreviation for thousand, “M” for million, and “B” for billion without a period or space. Consider variations in other languages and never use abbreviations when there is doubt.
 
 
 <DoAndDont>
@@ -167,7 +167,7 @@ Use the plural “millions” when talking about an unspecific number.
 	</DoAndDont.Do>
 </DoAndDont>
 
-Write out numbers in the millions and billions (“one million” instead of “1,000,000”) in longer texts and paragraphs. 
+Write out numbers in the millions and billions (“one million” instead of “1,000,000”) in longer texts and paragraphs.
 
 <DoAndDont>
 	<DoAndDont.Do>
@@ -178,13 +178,13 @@ Write out numbers in the millions and billions (“one million” instead of “
 	</DoAndDont.Dont>
 </DoAndDont>
 
-Use numerals for numbers in the millions for dates, addresses, units of measurement, currencies and percentages. 
+Use numerals for numbers in the millions for dates, addresses, units of measurement, currencies and percentages.
 
 <DoAndDont>
 	<DoAndDont.Do>
 		<DoAndDont.Item>The temperature can reach 1,000,000°C in the pod.</DoAndDont.Item>
 		<DoAndDont.Item>The cargo ship can carry up to 1,000,000kg.</DoAndDont.Item>
-		
+
 		<DoAndDont.Item>The success rate of our new implementation is 1,000,000%.</DoAndDont.Item>
 		<DoAndDont.Item>The project budget is $1,000,000. </DoAndDont.Item>
 	</DoAndDont.Do>
@@ -192,7 +192,7 @@ Use numerals for numbers in the millions for dates, addresses, units of measurem
 
 ## Percentages
 
-Use the % symbol instead of writing out “percentage” within the user interface to save space. 
+Use the % symbol instead of writing out “percentage” within the user interface to save space.
 
 <DoAndDont>
 	<DoAndDont.Do>
@@ -240,7 +240,7 @@ Use the plus symbol (+) or “00” before the country code and show extension n
 
 ## Related
 
-- [Time and dates](time-date.mdx)
+- [Dates](date.mdx)
 - [Money and currencies](money.mdx)
 - [Charts](../../../components/charts-overview/index.mdx)
 - [KPI](../../../components/kpi/index.mdx)
