--- a/docs/guidelines/language/formatting/software-versions.mdx
+++ b/docs/guidelines/language/formatting/software-versions.mdx
@@ -109,6 +109,6 @@ Add identifiers, such as alpha, before or after version numbers for pre-releases
 
 ## Related
 
-- [Time and dates](time-date.mdx)
+- [Dates](date.mdx)
 - [Numbers and percentages](numbers.mdx)
 - [Money and currencies](money.mdx)
