Remove trailing spaces from formatting guidelines
Cleaned up unnecessary trailing spaces in multiple documentation files under language formatting guidelines for addresses, measurements, money, software versions, and timezones. This improves consistency and readability without changing content.

--- a/docs/guidelines/language/formatting/timezones.mdx
+++ b/docs/guidelines/language/formatting/timezones.mdx
@@ -10,7 +10,7 @@ description: Time and time-related guidelines help prevent misunderstandings and
 
 import DoAndDont from '@site/src/components/DoAndDont';
 
-# Time and Time Zones
+# Time and Time zones
 
 ## Time
 
@@ -51,7 +51,7 @@ Use periods (.) to add milliseconds and nanoseconds, not a colon (:) according t
   </DoAndDont.Dont>
 </DoAndDont>
 
-## Time Ranges
+## Time ranges
 
 Use an en (–) dash to represent time ranges and intervals without spacing on either side of the dash.
 
@@ -73,7 +73,7 @@ Use "from" and "to" for time ranges with separate text or input fields.
   </DoAndDont.Do>
 </DoAndDont>
 
-## Time Duration
+## Time duration
 
 Use numerals to write about durations with the full or abbreviated time unit (depending on space in the UI).
 
@@ -85,7 +85,7 @@ Use numerals to write about durations with the full or abbreviated time unit (de
   </DoAndDont.Do>
 </DoAndDont>
 
-## Time Zones
+## Time zones
 
 Write "time zone" as two words, not one word "timezone".
 
@@ -186,7 +186,7 @@ Your Local Time (Berlin): 2025-04-09 02:00 (UTC+01:00)</DoAndDont.Item>
   </DoAndDont.Do>
 </DoAndDont>
 
-## Time-Related Problematic Words
+## Time-related problematic words
 
 Use "current" for active, ongoing states and avoid "actual" when referring to time.
 
@@ -204,7 +204,7 @@ Use "latest" for the newest updates or versions and "last" for final items in a 
 <DoAndDont>
   <DoAndDont.Do>
     <DoAndDont.Item>Latest firmware update: V2.1.5</DoAndDont.Item>
-    <DoAndDont.Item>Last firmware before end of life: V2.1.5</DoAndDont.Item>
+    <DoAndDont.Item>Last firmware update before end of life: V2.1.5</DoAndDont.Item>
   </DoAndDont.Do>
 </DoAndDont>
 
@@ -215,7 +215,7 @@ Use "recent" for past events that have just happened.
     <DoAndDont.Item>Recent alerts: 2 warnings</DoAndDont.Item>
   </DoAndDont.Do>
   <DoAndDont.Dont>
-    <DoAndDont.Item>Recent firmware: V2.1.5</DoAndDont.Item>
+    <DoAndDont.Item>Recent firmware update: V2.1.5</DoAndDont.Item>
   </DoAndDont.Dont>
 </DoAndDont>
 
