Remove period from currency section heading
Updated the heading 'Using currency symbols (¥) or codes (JPY).' to remove the trailing period for consistency with other section headings.

--- a/docs/guidelines/language/formatting/money.mdx
+++ b/docs/guidelines/language/formatting/money.mdx
@@ -79,7 +79,7 @@ Write out the full word in formal and legal documents.
   </DoAndDont.Do>
 </DoAndDont>
 
-## Using currency symbols (¥) or codes (JPY).
+## Using currency symbols (¥) or codes (JPY)
 
 **Currency symbol ($)**
 - User interface: dashboards, displays, etc.
