fix: broken links regarding deprecated drawer

--- a/docs/legacy/drawer/index.mdx
+++ b/docs/legacy/drawer/index.mdx
@@ -1,6 +1,9 @@
 ---
-doc-type: "tabs"
+doc-type: 'tabs'
 description: 'Drawers are containers that open on the click of a button to show additional content.'
 title: 'Drawer'
 deprecated:
+  - { type: 'deprecated', message: 'Since 4.0.0' }
+  - /docs/components/application
+unlisted: true
 ---
