Standardize apostrophe usage in documentation
Replaced straight apostrophes with typographic apostrophes (’) in 'Don’ts' and similar phrases across multiple documentation files for consistency and improved readability. Also removed whitespace corrections.

--- a/docs/components/charts-overview/index.mdx
+++ b/docs/components/charts-overview/index.mdx
@@ -40,7 +40,7 @@ npm install --save @siemens/ix-echarts
 ```
 
 1. Import the `registerTheme` function from our module.
-2. Invoke this function, passing in your `echarts` instance as an argument. You do not need to provide the `echarts` instance if it's provided globally in your `window` object when using vanilla Javascript.
+2. Invoke this function, passing in your `echarts` instance as an argument. You do not need to provide the `echarts` instance if it’s provided globally in your `window` object when using vanilla Javascript.
 3. Once this is done, you’ll be able to utilize the `brand-dark`, `brand-light`, `classic-dark` and `classic-light` themes for your chart.
 
 ```typescript
