--- a/docs/components/gauge-chart/index.mdx
+++ b/docs/components/gauge-chart/index.mdx
@@ -29,7 +29,7 @@ Arc gauge charts, also known as semi-circular progress bars, are a dynamic way t
 
 <EchartsProgressArcPlayground height="30rem" />
 
-## Dos and Don'ts
+## Dos and Don’ts
 
 - Do keep it simple and easy to read, with a clear needle and well-defined ranges
 - Do use color coding, e.g. green for good, red for danger, etc. to indicate different ranges
