--- a/docs/components/input-time/guide.mdx
+++ b/docs/components/input-time/guide.mdx
@@ -75,7 +75,7 @@ Time input has five states: Default, hover, disabled, read-only and focused.
   </DoAndDont.Do>
   <DoAndDont.Dont>
     <DoAndDont.Item>
-      Don't use the same input for start and end times, instead separate them
+      Don’t use the same input for start and end times, instead separate them
     </DoAndDont.Item>
   </DoAndDont.Dont>
 </DoAndDont>
