--- a/docs/components/line-chart/index.mdx
+++ b/docs/components/line-chart/index.mdx
@@ -29,7 +29,7 @@ Advanced line charts are an enhanced version of basic line charts, designed to p
 
 <EchartsLineAdvancedPlayground height="40rem" />
 
-## Dos and Don'ts
+## Dos and Don’ts
 
 - Do start the Y-axis at zero and label axes clearly
 - Do use contrasting colors for multiple lines to better distinguish different data series
