--- a/docs/components/3d/index.mdx
+++ b/docs/components/3d/index.mdx
@@ -34,8 +34,8 @@ To use 3D charts, import the `echarts-gl` package into your project:
 import 'echarts-gl';
 ```
 
-## Dos and Don'ts
+## Dos and Don’ts
 
 - Do use with data that's best seen and interpreted in multiple dimensions
-- Don't use 3D charts for simple data that can be effectively represented with 2D charts
-- Don't overuse 3D charts as they can make the data harder to interpret
+- Don’t use 3D charts for simple data that can be effectively represented with 2D charts
+- Don’t overuse 3D charts as they can make the data harder to interpret
