--- a/docs/components/bar-chart/index.mdx
+++ b/docs/components/bar-chart/index.mdx
@@ -22,12 +22,12 @@ Stacked bar charts are typically used to visualize the relationship between the 
 
 <EchartsBarHorizontalStackedPlayground height="40rem" />
 
-## Dos and Don'ts
+## Dos and Don’ts
 
 - Do start the Y-axis at zero and label axes clearly
 - Do use short and clear category names
 - Do include context and additional information when necessary
 - Do arrange categories and bars in a logical order
-- Don't use too many bars in one chart
-- Don't overcrowd charts with colors and categories, especially the stacked variant
-- Don't use stacked bars if the total value is not important
+- Don’t use too many bars in one chart
+- Don’t overcrowd charts with colors and categories, especially the stacked variant
+- Don’t use stacked bars if the total value is not important
