Update references to 'UX Writing' to 'UX writing'
Standardized references from 'UX Writing' to 'UX writing' across documentation for consistency. Also updated a support stage label from 'Deprecated' to 'Maintenance' in the release version documentation.

--- a/docs/components/time-picker/guide.mdx
+++ b/docs/components/time-picker/guide.mdx
@@ -19,7 +19,7 @@ Time pickers are primarily used within [time inputs](../input-time) but can also
 ## Options
 
 - **Value**: The selected time value.
-- **Format**: Choose which time units to display, depending on your needs (hours, minutes, seconds, milliseconds). Additionally, define a 12- or 24-hour format. We recommend to use a 24-hour format for universal readability (read more in the [UX Writing guides](./../../guidelines/language/writing-style-guide-getting-started)).
+- **Format**: Choose which time units to display, depending on your needs (hours, minutes, seconds, milliseconds). Additionally, define a 12- or 24-hour format. We recommend to use a 24-hour format for universal readability (read more in the [UX writing guides](./../../guidelines/language/writing-style-guide-getting-started)).
   - **Columns**: Hide hours, minutes, seconds and milliseconds columns when not needed.
   - **Intervals**: Define an interval for every unit to restrict allowed values and provide a faster selection. For example 2 hours, 15 minutes, 30 seconds, 100 milliseconds.
 - **Header**: Define a header text that conveys the context of the time selection. Hide it when there is already a related headline in your UI.
