--- a/docs/components/input-time/guide.mdx
+++ b/docs/components/input-time/guide.mdx
@@ -27,7 +27,7 @@ Time inputs are typically used in forms, filters and scheduling tools to ensure 
 - **Show text as tooltip**: See [form field](../forms-field).
 - **Placeholder**: See [form field](../forms-field). We typically use a placeholder to show an example time format to assist users when the field is empty.
 - **Error message**: Feedback text when time is not parsable. We typically use this to inform users that the entered time format is incorrect and guide them to enter a valid time.
-- **Format**: Specify the time format to ensure that times are entered in a consistent and recognizable format. Default is ‘TT’ which is the localized 24-hour time with seconds (read more in the [UX Writing guides](./../../guidelines/language/writing-style-guide-getting-started)).
+- **Format**: Specify the time format to ensure that times are entered in a consistent and recognizable format. Default is ‘TT’ which is the localized 24-hour time with seconds (read more in the [UX writing guides](./../../guidelines/language/writing-style-guide-getting-started)).
   - **Columns**: Show the respective columns in the time picker (see [time picker](../time-picker)).
   - **Intervals**: Define intervals to restrict allowed values (see [time picker](../time-picker)).
 - **Time picker**:
